# Machine-Learning---studies

./: FuelConsumption.csv  README.md  emissaoCO2.ipynb  pyproject.toml
project-02/: app.py  pyproject.toml
projeto_ml/project/: FuelConsumption.csv  README.md  emissaoCO2.ipynb  pyproject.toml
